<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HD WallPaper</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="desc">desc</string>
    <string name="menu_home">Home</string>
    <string name="menu_about">About</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_moreapp">More App</string>
    <string name="menu_rateapp">RateApp</string>
    <string name="menu_back">Back</string>
    <string name="menu_make_meme">Make a Meme</string>
    <string name="menu_share">Share</string>
    <string name="menu_save">Save</string>
    <string name="menu_zoom">Pinch Zoom</string>
    <string name="menu_fav">Fav</string>
    <string name="menu_setaswallpaper">SetsWallPaper</string>
    <string name="menu_editbyapp">Edit Image by App</string>
    <string name="menu_next">Next</string>
    <string name="img_no">No Favorite Found</string>
    <string name="close">Close</string>
    <string name="setaswallpaper">Set As Wallpaper</string>
    <string name="admob_publisher_id">ca-app-pub-3827322329603216/3786337283</string> <!-- your admob id -->

    <string name="max_lenght_of_text">"%1$d characters is limited"</string>
    <string name="edittext_defaut_hint">ENTER TEXT HERE</string>
    <!-- play store application link i.e more apps -->
    <string name="play_more_apps">https://play.google.com/store/apps/developer?id=Viavi+Lab</string>

</resources>