<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <!-- Back will display always -->
    <item android:id="@+id/menu_back"
          android:icon="@drawable/prev"
          android:title="@string/menu_back"
          android:showAsAction="always"/>
    
    <!-- Play & Stop-->
    <item android:id="@+id/menu_play"
          android:icon="@drawable/play"
          android:title="@string/menu_share"
          android:showAsAction="always"/>

    <!-- next -->
    
    <item android:id="@+id/menu_next"
          android:icon="@drawable/next"
          android:title="@string/menu_next"
          android:showAsAction="always"/>
    
    <!-- Favirote -->
    
      <item android:id="@+id/menu_fav"
          android:icon="@drawable/fav"
          android:title="@string/menu_fav"
          android:showAsAction="always"/>  
      
     <item
        android:id="@+id/menu_overflow"
        android:icon="@drawable/abs__ic_menu_moreoverflow_normal_holo_dark"
        android:showAsAction="always"
        android:title=""> 
      
         <menu >
      			 <item android:id="@+id/menu_make_meme"
			          android:icon="@drawable/meme"
			          android:title="@string/menu_make_meme"
			          android:showAsAction="ifRoom|withText"/>
             	 <!-- Share -->
			    <item android:id="@+id/menu_share"
			          android:icon="@drawable/share"
			          android:title="@string/menu_share"
			          android:showAsAction="ifRoom|withText"/>
    
			    <!-- setaswallpaper -->
			    <item android:id="@+id/menu_setaswallaper"
			          android:icon="@drawable/set"
			          android:title="@string/menu_setaswallpaper"
			          android:showAsAction="ifRoom|withText"/>
		     	<!--Edit image by app  -->
		     	 <item android:id="@+id/menu_editbyapp"
			          android:icon="@android:drawable/ic_menu_edit"
			          android:title="@string/menu_editbyapp"
			          android:showAsAction="ifRoom|withText"/>
			    <!-- Save -->
			    <item android:id="@+id/menu_save"
			          android:icon="@drawable/save"
			          android:title="@string/menu_save"
			          android:showAsAction="ifRoom|withText"/>
			    
			    <!-- Pinch Zoom -->
			    <item android:id="@+id/menu_zoom"
			          android:icon="@drawable/zoom"
			          android:title="@string/menu_zoom"
			          android:showAsAction="ifRoom|withText"/>
  
    	</menu>
    	
    </item>

</menu>
