<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <!-- About -->
    <item
        android:id="@+id/menu_gallery"
        android:icon="@drawable/gallery_icon"
        android:showAsAction="always"
        android:title="@string/menu_about"/>
    <item
        android:id="@+id/menu_capture"
        android:icon="@drawable/camera_icon"
        android:showAsAction="always"
        android:title="@string/menu_refresh"/>
    <item
        android:id="@+id/menu_overflow"
        android:icon="@drawable/abs__ic_menu_moreoverflow_normal_holo_dark"
        android:showAsAction="always"
        android:title="">
        <menu>
            <item
                android:id="@+id/menu_about"
                android:icon="@drawable/about"
                android:showAsAction="ifRoom|withText"
                android:title="@string/menu_about"/>
            <item
                android:id="@+id/menu_refresh"
                android:icon="@drawable/ic_navigation_refresh_dark"
                android:showAsAction="ifRoom|withText"
                android:title="@string/menu_refresh"/>
            <!-- Rate App -->
            <item
                android:id="@+id/menu_rateapp"
                android:icon="@drawable/rate"
                android:showAsAction="ifRoom|withText"
                android:title="@string/menu_rateapp"/>

            <!-- More App -->
            <item
                android:id="@+id/menu_moreapp"
                android:icon="@drawable/more"
                android:showAsAction="ifRoom|withText"
                android:title="@string/menu_moreapp"/>
        </menu>
    </item>

</menu>